objects/Source_System_View__c.object
<CustomObject>
    <description>Stores all CW customer records. Staging area for cleansing &amp; matching of data. Also used to inform reps of CW records linked to a customer.
&quot;Table populated via integration from Mule ESB
Cleansed fields populated by Triggers in SFDC&quot;</description>
    <fields>
        <fullName>ATG_Profile_ID__c</fullName>
        <label>ATG Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Source System Views</relationshipLabel>
        <relationshipName>Source_System_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Match_Key_Hash__c</fullName>
        <description>SHA-512 Base64 Encoded version of Address Match Key for indexing and comparison purposes.</description>
        <externalId>true</externalId>
        <label>Address Match Key Hash</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Match_Key__c</fullName>
        <description>Consolidation of address1, address2, city, state,country for matching purposes (some additional analysis required). Punctuation &amp; space removal, upper case</description>
        <label>Address Match Key</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditLog__c</fullName>
        <label>AuditLog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Address_1__c</fullName>
        <label>Cleansed Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Address_2__c</fullName>
        <label>Cleansed Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_City__c</fullName>
        <label>Cleansed City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Company_Name__c</fullName>
        <label>Cleansed Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_First_Name__c</fullName>
        <label>Cleansed First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Last_Name__c</fullName>
        <label>Cleansed Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_State__c</fullName>
        <label>Cleansed State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Zip__c</fullName>
        <label>Cleansed Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Source System Views</relationshipLabel>
        <relationshipName>Source_System_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Address</label>
        <referenceTo>Customer_Address__c</referenceTo>
        <relationshipLabel>Source System Views</relationshipLabel>
        <relationshipName>Source_System_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_Phone_Match_Key__c</fullName>
        <description>Phone for matching purposes -- removes bad phone etc</description>
        <label>Day Phone Match Key</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Day_Phone__c</fullName>
        <label>Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Duplicate_Set_ID_Set_Datetime__c</fullName>
        <description>When the duplicate set ID is set. This gives us a way to determine how long it takes for the system to set this value. Which in turn lets us know how long we have to wait before letting the batch job process the record.</description>
        <label>Duplicate Set ID Set Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duplicate_Set_ID__c</fullName>
        <externalId>true</externalId>
        <label>Duplicate Set ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_Source_System_Customer_ID__c</fullName>
        <description>External Key Unique -- key used by integration</description>
        <externalId>true</externalId>
        <label>EXT Source System Customer ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <description>The portion of the email address that is to the right of the @.</description>
        <inlineHelpText>The portion of the email address that is to the right of the @.</inlineHelpText>
        <label>Email Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Local_Part__c</fullName>
        <description>The &quot;local part&quot; of the email address before the @.</description>
        <inlineHelpText>The &quot;local part&quot; of the email address before the @.</inlineHelpText>
        <label>Email Local Part</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Match_Key__c</fullName>
        <label>Email Match Key</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <label>Household ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Match_Key__c</fullName>
        <description>Concatenation of identifying fields including Email, Last Name, and First Name.</description>
        <formula>Email__c  &amp; &apos;,&apos; &amp;  Cleansed_Last_Name__c &amp; &apos;,&apos; &amp;  Cleansed_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Concatenation of identifying fields including Email, Last Name, and First Name.</inlineHelpText>
        <label>Id Match Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_ID__c</fullName>
        <label>Individual ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_RH_Employee__c</fullName>
        <formula>Order_Type_Code__c = &apos;E&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is RH Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ready_For_Duplicate_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ready For Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Record_Score__c</fullName>
        <description>This score is a key part of the matching process. 
When multiple candidate records can be consolidated into one record, this score determines which record will be the Master (the name, address, phone etc for the spawned customer is taken from the Master record). 
The score is designed to ensure:
1. Define the order of entry of new Candidate records into the process
- There is a final addition for match type = company to ensure company records are processed prior to any associated contact records
2. Ensure Salesforce records always outscore other external system records</description>
        <formula>/* This section determines the highest value Salesforce record as Salesforce records always end up as the master over external system records */
If(Source_System__c=&quot;Salesforce&quot;,100000000,0) +
If(Contact__r.Tier_Name__c=&quot;Top Tier&quot;,100000,0) +
If(Contact__r.Tier_Name__c =&quot;Tier 2&quot;,50000,0) +
If(Contact__r.Tier_Name__c =&quot;Tier 3&quot;,25000,0) +
(Date(1970,01,01)-BLANKVALUE(DateValue(If(Match_Type__c = &quot;Company&quot;, Account__r.CreatedDate,  
                                                Contact__r.CreatedDate)),Date(1970,01,01)))/10000 +

/* This section calculates the master record score for non Salesforce records */
If( DateValue(Source_System_Last_Modified_Date__c) &gt; Today()-730,10000,0) +
If( Originating_Source_System__c = &quot;ATG&quot;,5000,0) +
(BLANKVALUE(DateValue(Source_System_Last_Modified_Date__c),Date(1970,01,01)) - Date(1970,01,01))/10000 +

/* this next line ensures company records are always processed prior to any associated contacts */
/* Because company records are only ever consolidated to the same match type, the score does not impact &quot;within company match&quot; selections */
If(Match_Type__c = &quot;Company&quot;,200000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Record Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <description>This field specifies the match type to be processed by Salesforce duplicate match</description>
        <label>Match Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <label>Membership Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_In_Email__c</fullName>
        <description>If First Name or Last Name is contained int he Email Mailbox, set to Y</description>
        <formula>OR(CONTAINS( UPPER(Email_Local_Part__c) ,  Cleansed_First_Name__c ), CONTAINS( UPPER(Email_Local_Part__c), Cleansed_Last_Name__c))</formula>
        <inlineHelpText>If First Name or Last Name is contained int he Email Mailbox, set to Y</inlineHelpText>
        <label>Is Name In Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Type_Code__c</fullName>
        <label>Order Type Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Originating_Source_System__c</fullName>
        <label>Originating Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Complete_Time__c</fullName>
        <description>Time the processing was set to complete.</description>
        <label>Processing Complete Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Ready_Time__c</fullName>
        <label>Processing Ready Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting to Start</fullName>
                    <default>true</default>
                    <label>Waiting to Start</label>
                </value>
                <value>
                    <fullName>Ready for Match Step</fullName>
                </value>
                <value>
                    <fullName>Ready for Order Linking</fullName>
                </value>
                <value>
                    <fullName>Processing Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System_Create_Date__c</fullName>
        <label>CW Customer Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_System_Last_Modified_Date__c</fullName>
        <label>CW Customer Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_System_View_CW_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System View CW Company</label>
        <referenceTo>Source_System_View__c</referenceTo>
        <relationshipLabel>Source System Views</relationshipLabel>
        <relationshipName>Source_System_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <formula>IF(Source_Table__c = &quot;CW Customer&quot; || Source_Table__c = &quot;CW Customer Ship To&quot; || Source_Table__c = &quot;CW Order Ship To&quot; || Source_Table__c = &quot;CW Replicated Company&quot;, &quot;CW&quot;,
IF(Source_Table__c = &quot;ATG Profile&quot;, &quot;ATG&quot;, 
IF(Source_Table__c = &quot;Salesforce Account&quot; || Source_Table__c = &quot;Salesforce Contact&quot;, &quot;Salesforce&quot;,
&quot;Not Found&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Table_ID__c</fullName>
        <description>The ID of the table that spawned the record. This is for auditing trail</description>
        <label>Source_Table_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Table__c</fullName>
        <label>Source Table</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Add field history tracking</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stewardship_Review_Description__c</fullName>
        <label>Stewardship Review Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stewardship_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stewardship Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>Contact__r.Tier_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Order_Value__c</fullName>
        <label>Total Customer Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_ID__c</fullName>
        <label>Trade ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Add field history tracking</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Source System View</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processing_Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CW_Customers_Search_Email</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>startsWith</operation>
        </filters>
        <label>CW Customers Search Email</label>
    </listViews>
    <listViews>
        <fullName>Demo_Data_Load</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Email__c</columns>
        <columns>Master_Record_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/18/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>EXT_Source_System_Customer_ID__c</field>
            <operation>startsWith</operation>
            <value>DEMOUC</value>
        </filters>
        <label>Demo Data Load</label>
    </listViews>
    <nameField>
        <label>Source System ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source System Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>